--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="description" content="Control you house">
+    <meta name="description" content="Control your house">
     <meta name="author" content="Ciprian Bostan">
 
     <title>Our House</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/jquery.svg.css">
-    <link href="css/common.css" rel="stylesheet">
+    <link rel="icon" href="img/house-icon.png">
+    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/jquery-svg/jquery.svg.css">
+    <link rel="stylesheet" type="text/css" href="css/common.css">
 </head>
 <body>
 
@@ -18,14 +19,14 @@
     <div class="row">
         <hr>
         <div class="page-header">
-            <h1>Automating our house, in the middle of the street</h1>
+            <h1>Automating our house, in the middle of our street</h1>
 
-            <h3>
+            <h2>
                 <small>Have you seen our house?</small>
-            </h3>
-            <!--<iframe width="420" height="0"-->
-                    <!--src="https://www.youtube.com/embed/rXuvdeEC5y8?rel=0&autohide=0&autoplay=1&version=3&loop=1&playlist=rXuvdeEC5y8"-->
-                    <!--frameborder="0" allowfullscreen></iframe>-->
+            </h2>
+            <iframe height="0"
+                    src="https://www.youtube.com/embed/rXuvdeEC5y8?rel=0&autohide=0&autoplay=1&version=3&loop=1&playlist=rXuvdeEC5y8"
+                    frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
     <div class="form-group">
@@ -33,19 +34,19 @@
             <label> Left Side Temperature
                 <select id="left-side-temp" class="form-control temperature-dial left-side">
                     <optgroup label="Low">
-                        <option value="18">18&deg;</option>
-                        <option value="19">19&deg;</option>
-                        <option value="20">20&deg;</option>
+                        <option value="18">18&deg; C</option>
+                        <option value="19">19&deg; C</option>
+                        <option value="20">20&deg; C</option>
                     </optgroup>
                     <optgroup label="Optimal">
-                        <option value="21">21&deg;</option>
-                        <option value="22">22&deg;</option>
-                        <option value="23">23&deg;</option>
+                        <option value="21">21&deg; C</option>
+                        <option value="22">22&deg; C</option>
+                        <option value="23">23&deg; C</option>
                     </optgroup>
                     <optgroup label="High">
-                        <option value="24">24&deg;</option>
-                        <option value="25">25&deg;</option>
-                        <option value="26">26&deg;</option>
+                        <option value="24">24&deg; C</option>
+                        <option value="25">25&deg; C</option>
+                        <option value="26">26&deg; C</option>
                     </optgroup>
                 </select>
             </label>
@@ -55,40 +56,41 @@
             <label> Living Area Temperature
                 <select id="living-area-temp" class="form-control temperature-dial living-side">
                     <optgroup label="Low">
-                        <option value="18">18&deg;</option>
-                        <option value="19">19&deg;</option>
-                        <option value="20">20&deg;</option>
+                        <option value="18">18&deg; C</option>
+                        <option value="19">19&deg; C</option>
+                        <option value="20">20&deg; C</option>
                     </optgroup>
                     <optgroup label="Optimal">
-                        <option value="21">21&deg;</option>
-                        <option value="22">22&deg;</option>
-                        <option value="23">23&deg;</option>
+                        <option value="21">21&deg; C</option>
+                        <option value="22">22&deg; C</option>
+                        <option value="23">23&deg; C</option>
                     </optgroup>
                     <optgroup label="High">
-                        <option value="24">24&deg;</option>
-                        <option value="25">25&deg;</option>
-                        <option value="26">26&deg;</option>
+                        <option value="24">24&deg; C</option>
+                        <option value="25">25&deg; C</option>
+                        <option value="26">26&deg; C</option>
                     </optgroup>
                 </select>
             </label>
         </div>
+
         <div class="col-md-4">
             <label> Right Side Temperature
                 <select id="right-side-temp" class="form-control temperature-dial right-side">
                     <optgroup label="Low">
-                        <option value="18">18&deg;</option>
-                        <option value="19">19&deg;</option>
-                        <option value="20">20&deg;</option>
+                        <option value="18">18&deg; C</option>
+                        <option value="19">19&deg; C</option>
+                        <option value="20">20&deg; C</option>
                     </optgroup>
                     <optgroup label="Optimal">
-                        <option value="21">21&deg;</option>
-                        <option value="22">22&deg;</option>
-                        <option value="23">23&deg;</option>
+                        <option value="21">21&deg; C</option>
+                        <option value="22">22&deg; C</option>
+                        <option value="23">23&deg; C</option>
                     </optgroup>
                     <optgroup label="High">
-                        <option value="24">24&deg;</option>
-                        <option value="25">25&deg;</option>
-                        <option value="26">26&deg;</option>
+                        <option value="24">24&deg; C</option>
+                        <option value="25">25&deg; C</option>
+                        <option value="26">26&deg; C</option>
                     </optgroup>
                 </select>
             </label>
@@ -97,11 +99,11 @@
     <div id="house" class="text-center"></div>
 </div>
 
-<script src="js/jquery-2.2.4.min.js" type="text/javascript"></script>
-<script src="js/bootstrap.min.js" type="text/javascript"></script>
-<script src="js/jquerysvg/jquery.svg.js" type="text/javascript"></script>
-<script src="js/jquerysvg/jquery.svgdom.js" type="text/javascript"></script>
-<script src="js/automation/common.js" type="text/javascript"></script>
+<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="bower_components/jquery-svg/jquery.svg.js"></script>
+<script type="text/javascript" src="bower_components/jquery-svg/jquery.svgdom.js"></script>
+<script type="text/javascript" src="js/automation/common.js"></script>
 
 </body>
 </html>
