--- a/index.html
+++ b/index.html
@@ -24,83 +24,20 @@
             <h2>
                 <small>Have you seen our house?</small>
             </h2>
-            <iframe height="0"
-                    src="https://www.youtube.com/embed/rXuvdeEC5y8?rel=0&autohide=0&autoplay=1&version=3&loop=1&playlist=rXuvdeEC5y8"
-                    frameborder="0" allowfullscreen></iframe>
+            <!--<iframe height="0"-->
+                    <!--src="https://www.youtube.com/embed/rXuvdeEC5y8?rel=0&autohide=0&autoplay=1&version=3&loop=1&playlist=rXuvdeEC5y8"-->
+                    <!--frameborder="0" allowfullscreen></iframe>-->
         </div>
     </div>
-    <div class="form-group">
-        <div class="col-md-4">
-            <label> Left Side Temperature
-                <select id="left-side-temp" class="form-control temperature-dial left-side">
-                    <optgroup label="Low">
-                        <option value="18">18&deg; C</option>
-                        <option value="19">19&deg; C</option>
-                        <option value="20">20&deg; C</option>
-                    </optgroup>
-                    <optgroup label="Optimal">
-                        <option value="21">21&deg; C</option>
-                        <option value="22">22&deg; C</option>
-                        <option value="23">23&deg; C</option>
-                    </optgroup>
-                    <optgroup label="High">
-                        <option value="24">24&deg; C</option>
-                        <option value="25">25&deg; C</option>
-                        <option value="26">26&deg; C</option>
-                    </optgroup>
-                </select>
-            </label>
-        </div>
+    <div id="temperature-dials"  class="form-group">
 
-        <div class="col-md-4">
-            <label> Living Area Temperature
-                <select id="living-area-temp" class="form-control temperature-dial living-side">
-                    <optgroup label="Low">
-                        <option value="18">18&deg; C</option>
-                        <option value="19">19&deg; C</option>
-                        <option value="20">20&deg; C</option>
-                    </optgroup>
-                    <optgroup label="Optimal">
-                        <option value="21">21&deg; C</option>
-                        <option value="22">22&deg; C</option>
-                        <option value="23">23&deg; C</option>
-                    </optgroup>
-                    <optgroup label="High">
-                        <option value="24">24&deg; C</option>
-                        <option value="25">25&deg; C</option>
-                        <option value="26">26&deg; C</option>
-                    </optgroup>
-                </select>
-            </label>
-        </div>
-
-        <div class="col-md-4">
-            <label> Right Side Temperature
-                <select id="right-side-temp" class="form-control temperature-dial right-side">
-                    <optgroup label="Low">
-                        <option value="18">18&deg; C</option>
-                        <option value="19">19&deg; C</option>
-                        <option value="20">20&deg; C</option>
-                    </optgroup>
-                    <optgroup label="Optimal">
-                        <option value="21">21&deg; C</option>
-                        <option value="22">22&deg; C</option>
-                        <option value="23">23&deg; C</option>
-                    </optgroup>
-                    <optgroup label="High">
-                        <option value="24">24&deg; C</option>
-                        <option value="25">25&deg; C</option>
-                        <option value="26">26&deg; C</option>
-                    </optgroup>
-                </select>
-            </label>
-        </div>
     </div>
     <div id="house" class="text-center"></div>
 </div>
 
 <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="bower_components/mustache.js/mustache.min.js"></script>
 <script type="text/javascript" src="bower_components/jquery-svg/jquery.svg.js"></script>
 <script type="text/javascript" src="bower_components/jquery-svg/jquery.svgdom.js"></script>
 <script type="text/javascript" src="js/automation/common.js"></script>
