--- a/index.html
+++ b/index.html
@@ -35,12 +35,6 @@
     <div id="house" class="text-center"></div>
 </div>
 
-<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
-<script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="bower_components/mustache.js/mustache.min.js"></script>
-<script type="text/javascript" src="bower_components/jquery-svg/jquery.svg.js"></script>
-<script type="text/javascript" src="bower_components/jquery-svg/jquery.svgdom.js"></script>
-<script type="text/javascript" src="js/automation/common.js"></script>
-
+<script src="bower_components/requirejs/require.js" data-main="app"></script>
 </body>
 </html>
