--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <h2>
                 <small>Have you seen our house?</small>
             </h2>
-            <!--<iframe height="0"-->
-                    <!--src="https://www.youtube.com/embed/rXuvdeEC5y8?rel=0&autohide=0&autoplay=1&version=3&loop=1&playlist=rXuvdeEC5y8"-->
-                    <!--frameborder="0" allowfullscreen></iframe>-->
+            <iframe height="0"
+                    src="https://www.youtube.com/embed/rXuvdeEC5y8?rel=0&autohide=0&autoplay=1&version=3&loop=1&playlist=rXuvdeEC5y8"
+                    frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
     <div id="temperature-dials"  class="form-group">
