added post server interaction, more refactoring

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                     frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
-    <div id="temperature-dials"  class="form-group">
+    <div id="temperature-dials" class="form-group">
 
     </div>
-    <div id="house" class="text-center"></div>
+    <div id="house"></div>
 </div>
 
 <script src="bower_components/requirejs/require.js" data-main="app"></script>
