--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <h2>
                 <small>Have you seen our house?</small>
             </h2>
-            <iframe height="0"
-                    src="https://www.youtube.com/embed/rXuvdeEC5y8?rel=0&autohide=0&autoplay=1&version=3&loop=1&playlist=rXuvdeEC5y8"
+            <iframe width="300" height="34"
+                    src="https://www.youtube.com/embed/rXuvdeEC5y8?rel=0&autohide=0&autoplay=1&version=3&loop=1&showinfo=0&controls=2&fs=0&playlist=rXuvdeEC5y8"
                     frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
