--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <link rel="stylesheet" type="text/css" href="css/house.css">
 </head>
 <body>
-
+<noscript>
+    <div class="alert alert-danger" role="alert">
+        Javascript is not enabled in your browser. Fix it please
+    </div>
+</noscript>
 <div class="container-fluid text-center">
     <div class="row">
         <hr>
@@ -24,9 +28,6 @@
             <h2>
                 <small>Have you seen our house?</small>
             </h2>
-            <iframe width="300" height="34"
-                    src="https://www.youtube.com/embed/rXuvdeEC5y8?rel=0&autohide=0&autoplay=1&version=3&loop=1&showinfo=0&controls=2&fs=0&playlist=rXuvdeEC5y8"
-                    frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
     <div id="temperature-dials" class="form-group">
